# monkeybot

./: .gitignore  Cargo.toml  README.md  ROADMAP.md  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json
apps/desktop/: package.json  tsconfig.json
apps/desktop/src/main/: index.ts  ipc.ts  tray.ts
apps/desktop/src/preload/: index.ts
apps/desktop/src/renderer/: index.html  index.ts
apps/desktop/src/renderer/components/: ChatView.ts  KillSwitch.ts  Onboarding.ts  StatusBar.ts  TextInput.ts  VoiceButton.ts
apps/desktop/src/renderer/styles/: global.css
crates/cua-driver-rs/: Cargo.toml
crates/cua-driver-rs/src/: cua.rs  main.rs  safety.rs  socket.rs  types.rs
