[package]
name = "cua-driver-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Rust CUA driver daemon — Unix socket server for computer-use actions with safety guardrails."

[[bin]]
name = "cua-driver"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
